# Minions

./: .gitignore  README.md
circuit/: minion_v0.3_rev1.brd  minion_v0.3_rev1.sch
code/archive/: m_simulate.m
code/firmware/: README.md
code/optical-analysis/: README.md
code/optical-analysis/stereo-calibration/: CMakeLists.txt  README.md  calibrateCameraMat.m  calibrationRaw.cpp  detectGridPoints.cpp
code/optical-analysis/stereo-calibration/params/: waterParams.mat
code/optical-analysis/stereo-calibration/water-stereo/output/: cam_1_1.yml  cam_1_2.txt  cam_1_2.yml  cam_1_3.yml  cam_1_4.txt  cam_1_4.yml  cam_1_5.txt  cam_1_5.yml  cam_1_6.txt  cam_1_6.yml  cam_1_7.txt  cam_1_7.yml  cam_1_8.txt  cam_1_8.yml  cam_1_9.txt  cam_1_9.yml  cam_2_1.yml  cam_2_2.txt  cam_2_2.yml  cam_2_3.yml  cam_2_4.txt  cam_2_4.yml  cam_2_5.txt  cam_2_5.yml  cam_2_6.txt  cam_2_6.yml  cam_2_7.txt  cam_2_7.yml  cam_2_8.yml  cam_2_9.txt  cam_2_9.yml  extrinsics.yml  intrinsics_1.yml  intrinsics_2.yml
code/optical-analysis/stereo-calibration/water-stereo/output/temp/: cam_1_1.txt  cam_1_1.yml  cam_1_2.txt  cam_1_2.yml  cam_2_1.txt  cam_2_1.yml  cam_2_2.txt  cam_2_2.yml
code/ptv/: README.md  compare2DResults.m  compare3DResults.m  createStereoParams.m  d_evaluate.m  d_simulate.m  detectParticles.m  evalulate.m  find3DSim.m  generateCentroids.m  generateCylinder.m  generateSphere.m  inBoundary2D.m  indexTraces.m  m_simulate.m  matchTracksPTVtoSim.m  mergeLostTracks.m  projectPoints.m  runPTV.m  simulate.m  simulator.m  updateTracks.m  updateTracksPTV.m
mechanical/laser-cut/: README.md
(+240 files in other folders)
